--- a/app/src/main/res/layout/activity_form_account.xml
+++ b/app/src/main/res/layout/activity_form_account.xml
@@ -4,32 +4,36 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#d3d3d3"
     tools:context="com.example.esdraschaves.aplicativocedro.FormAccountActivity">
 
     <TextView
         android:id="@+id/text_new_account"
         android:layout_width="wrap_content"
-        android:layout_height="24dp"
+        android:layout_height="43dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="96dp"
+        android:layout_marginTop="80dp"
         android:text="@string/add_account"
+        android:textColor="#25AE90"
+        android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/toolbar2" />
 
     <EditText
         android:id="@+id/edit_url"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:layout_marginEnd="40dp"
         android:layout_marginStart="40dp"
-        android:layout_marginTop="88dp"
-        android:paddingLeft="10dp"
+        android:layout_marginTop="100dp"
+        android:background="#e0e0e0"
         android:ems="10"
         android:hint="@string/text_url"
-        android:inputType="textPersonName"
+        android:inputType="text|textEmailAddress"
+        android:paddingLeft="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
@@ -38,14 +42,15 @@
     <EditText
         android:id="@+id/edit_userName"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:layout_marginEnd="40dp"
         android:layout_marginStart="40dp"
-        android:paddingLeft="10dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="24dp"
+        android:background="#e0e0e0"
         android:ems="10"
         android:hint="@string/text_userName"
-        android:inputType="textPersonName"
+        android:inputType="text|textEmailAddress"
+        android:paddingLeft="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/edit_url" />
@@ -53,29 +58,43 @@
     <EditText
         android:id="@+id/edit_userPassword"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:layout_marginEnd="40dp"
         android:layout_marginStart="40dp"
-        android:paddingLeft="10dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="24dp"
+        android:background="#e0e0e0"
         android:ems="10"
         android:hint="@string/et_PasswordHint"
         android:inputType="textPassword"
+        android:paddingLeft="10dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/edit_userName" />
 
     <Button
-        android:id="@+id/button_done"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="60dp"
+        android:layout_marginBottom="120dp"
         android:layout_marginEnd="40dp"
         android:layout_marginStart="40dp"
-        android:text="@string/text_done"
+        android:background="#25AE90"
+        android:textColor="#FFFFFF"
         android:onClick="finishedForm"
+        android:text="@string/text_done"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar2"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:background="?attr/colorPrimary"
+        android:minHeight="?attr/actionBarSize"
+        android:theme="?attr/actionBarTheme"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
