correção de bugs e talvez digital

--- a/app/src/main/res/layout/activity_form_account.xml
+++ b/app/src/main/res/layout/activity_form_account.xml
@@ -73,18 +73,20 @@
         app:layout_constraintTop_toBottomOf="@+id/edit_userName" />
 
     <Button
+        android:id="@+id/button"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="120dp"
         android:layout_marginEnd="40dp"
         android:layout_marginStart="40dp"
+        android:layout_marginTop="100dp"
         android:background="#25AE90"
-        android:textColor="#FFFFFF"
         android:onClick="finishedForm"
         android:text="@string/text_done"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:textColor="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/edit_userPassword" />
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar2"
@@ -96,5 +98,18 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/f_text_error"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:layout_marginEnd="40dp"
+        android:layout_marginStart="40dp"
+        android:textColor="#FF0000"
+        app:layout_constraintBottom_toTopOf="@+id/edit_url"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.132"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
