--- a/app/src/main/res/layout/activity_show_data.xml
+++ b/app/src/main/res/layout/activity_show_data.xml
@@ -23,14 +23,13 @@
 
 
     <android.support.constraint.ConstraintLayout
+        android:id="@+id/constraintLayout"
         android:layout_width="361dp"
         android:layout_height="200dp"
-        android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="70dp"
+        android:layout_marginTop="350dp"
         android:background="#e0e0e0"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.506"
         app:layout_constraintStart_toStartOf="parent"
@@ -155,27 +154,27 @@
         android:id="@+id/button_edit_account"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="120dp"
-        android:layout_marginStart="72dp"
+        android:layout_marginStart="64dp"
+        android:layout_marginTop="100dp"
         android:background="#25AE90"
         android:onClick="updateAccount"
         android:text="@string/text_edit"
         android:textColor="#FFFFFF"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
 
     <Button
         android:id="@+id/button_delete_account"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="120dp"
-        android:layout_marginEnd="80dp"
+        android:layout_marginEnd="68dp"
+        android:layout_marginTop="100dp"
         android:background="#25AE90"
         android:onClick="deleteAccount"
         android:text="@string/text_delete"
         android:textColor="#FFFFFF"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar3"
